--- a/start.html
+++ b/start.html
@@ -6,6 +6,14 @@
     <title>Document</title>
 </head>
 <body>
-    abcd
+    jay shree ganesh
+    <h1>this is your brother hello</h1>
+    <p>Welcome to the world of web development!</p>
+    <p>Here, you can create amazing websites using HTML, CSS, and JavaScript.</p>
+    <p>Feel free to explore and learn more about web technologies.</p>
+    <p>Happy coding!</p>
+    <p>Remember, every great website starts with a simple HTML structure.</p>   
+    <p>Keep practicing and you'll become a web development pro in no time!</p>
+    <p>Don't hesitate to reach out if you have any questions or need help.</p
 </body>
 </html>
